--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -20,15 +20,15 @@ on fs
     mkdir /mnt/vendor/nvdata 0700 root root
     mkdir /mnt/vendor/nvcfg 0700 root root
     mkdir /mnt/vendor/persist 0700 root root
-    mount ext4 /dev/block/platform/bootdevice/by-name/protect1 /mnt/vendor/protect_f rw wait
-    mount ext4 /dev/block/platform/bootdevice/by-name/protect2 /mnt/vendor/protect_s rw wait
-    mount ext4 /dev/block/platform/bootdevice/by-name/nvdata /mnt/vendor/nvdata rw wait
-    mount ext4 /dev/block/platform/bootdevice/by-name/nvcfg /mnt/vendor/nvcfg rw wait
-    mount ext4 /dev/block/platform/bootdevice/by-name/persist /mnt/vendor/persist rw wait
-    symlink /mnt/vendor/protect_f /vendor/protect_f
-    symlink /mnt/vendor/protect_s /vendor/protect_s
-    symlink /mnt/vendor/nvcfg /vendor/nvcfg
-    symlink /mnt/vendor/nvdata /vendor/nvdata
+    mount ext4 /dev/block/platform/bootdevice/by-name/protect1 /protect_f
+    mount ext4 /dev/block/platform/bootdevice/by-name/protect2 /protect_s
+    mount ext4 /dev/block/platform/bootdevice/by-name/nvdata /nvdata
+    mount ext4 /dev/block/platform/bootdevice/by-name/nvcfg /nvcfg
+    mount ext4 /dev/block/platform/bootdevice/by-name/persist /persist
+    symlink /protect_f /mnt/vendor/protect_f
+    symlink /protect_s /mnt/vendor/protect_s
+    symlink /nvcfg /mnt/vendor/nvcfg
+    symlink /nvdata /mnt/vendor/nvdata
 
     install_keyring
 
