--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -29,7 +29,8 @@ on fs
     symlink /protect_s /mnt/vendor/protect_s
     symlink /nvcfg /mnt/vendor/nvcfg
     symlink /nvdata /mnt/vendor/nvdata
-
+    symlink /persist /mnt/vendor/persist
+    
     install_keyring
 
 service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
