--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -29,7 +29,11 @@ on fs
     symlink /protect_s /mnt/vendor/protect_s
     symlink /nvcfg /mnt/vendor/nvcfg
     symlink /nvdata /mnt/vendor/nvdata
-    
+    symlink /mnt/vendor/protect_f /vendor/protect_f
+    symlink /mnt/vendor/protect_s /vendor/protect_s
+    symlink /mnt/vendor/nvcfg /vendor/nvcfg
+    symlink /mnt/vendor/nvdata /vendor/nvdata
+
     install_keyring
 
 service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
