--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -20,16 +20,16 @@ on fs
     mkdir /mnt/vendor/nvdata 0700 root root
     mkdir /mnt/vendor/nvcfg 0700 root root
     mkdir /mnt/vendor/persist 0700 root root
-    mount ext4 /dev/block/by-name/protect1 /mnt/vendor/protect_f
-    mount ext4 /dev/block/by-name/protect2 /mnt/vendor/protect_s
-    mount ext4 /dev/block/by-name/nvdata /mnt/vendor/nvdata
-    mount ext4 /dev/block/by-name/nvcfg /mnt/vendor/nvcfg
-    mount ext4 /dev/block/by-name/persist /mnt/vendor/persist
-    symlink /mnt/vendor/protect_f /protect_f
-    symlink /mnt/vendor/protect_s /protect_s
-    symlink /mnt/vendor/nvcfg /nvcfg
-    symlink /mnt/vendor/nvdata /nvdata
-    symlink /mnt/vendor/persist /persist
+    mount ext4 /dev/block/by-name/protect1 /protect_f
+    mount ext4 /dev/block/by-name/protect2 /protect_s
+    mount ext4 /dev/block/by-name/nvdata /nvdata
+    mount ext4 /dev/block/by-name/nvcfg /nvcfg
+    mount ext4 /dev/block/by-name/persist /persist
+    symlink /protect_f /mnt/vendor/protect_f
+    symlink /protect_s /mnt/vendor/protect_s
+    symlink /nvcfg /mnt/vendor/nvcfg
+    symlink /nvdata /mnt/vendor/nvdata
+    symlink /persist /mnt/vendor/persist
 
     install_keyring
 
