--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -14,23 +14,9 @@ on post-fs
     start mtk.plpath.utils.link
 
 on fs
-    mkdir /mnt/vendor 0700 root root
-    mkdir /mnt/vendor/protect_f 0700 root root
-    mkdir /mnt/vendor/protect_s 0700 root root
-    mkdir /mnt/vendor/nvdata 0700 root root
-    mkdir /mnt/vendor/nvcfg 0700 root root
-    mkdir /mnt/vendor/persist 0700 root root
-    mount ext4 /dev/block/by-name/protect1 /protect_f
-    mount ext4 /dev/block/by-name/protect2 /protect_s
-    mount ext4 /dev/block/by-name/nvdata /nvdata
-    mount ext4 /dev/block/by-name/nvcfg /nvcfg
-    mount ext4 /dev/block/by-name/persist /persist
-    symlink /mnt/vendor/protect_f /protect_f
-    symlink /mnt/vendor/protect_s /protect_s
-    symlink /mnt/vendor/nvcfg /nvcfg
-    symlink /mnt/vendor/nvdata /nvdata
-    symlink /mnt/vendor/persist /persist
-
+    mkdir /tmp/keystore 0700 root root
+    symlink /tmp/keystore /data/misc/keystore/user_0
+    
     install_keyring
 
 service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
