--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -16,7 +16,7 @@ on post-fs
 on fs
     mkdir /tmp/misc 0700 root root
     mkdir /tmp/misc/keystore 0700 root root
-    symlink /tmp/keystore /data/misc/keystore/user_0
+    symlink /tmp/misc/keystore /data/misc/keystore/user_0
     
     install_keyring
 
