--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -14,22 +14,6 @@ on post-fs
     start mtk.plpath.utils.link
 
 on fs
-    mkdir /mnt/vendor 0755 system system
-    mkdir /mnt/vendor/protect_f 0770 system system
-    mkdir /mnt/vendor/protect_s 0770 system system
-    mkdir /mnt/vendor/nvdata 0771 system system
-    mkdir /mnt/vendor/nvcfg 0771 system system
-    mkdir /mnt/vendor/persist 0771 system system
-    mount ext4 /dev/block/by-name/protect1 /mnt/vendor/protect_f rw wait
-    mount ext4 /dev/block/by-name/protect2 /mnt/vendor/protect_s rw wait
-    mount ext4 /dev/block/by-name/nvdata /mnt/vendor/nvdata rw wait
-    mount ext4 /dev/block/by-name/nvcfg /mnt/vendor/nvcfg rw wait
-    mount ext4 /dev/block/by-name/persist /mnt/vendor/persist rw wait
-    symlink /mnt/vendor/protect_f /vendor/protect_f
-    symlink /mnt/vendor/protect_s /vendor/protect_s
-    symlink /mnt/vendor/nvcfg /vendor/nvcfg
-    symlink /mnt/vendor/nvdata /vendor/nvdata
-
     install_keyring
 
 service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
@@ -70,20 +54,24 @@ on property:vendor.sys.listener.registered=true
     start gatekeeper-1-0
     
 on property:hwservicemanager.ready=true
+    start keystore2
     start keymaster-4-0
     start gatekeeper-1-0
    
 on property:ro.crypto.state=unsupported
+    stop keystore2
     stop teei_daemon
     stop keymaster-4-0
     stop gatekeeper-1-0
       
 on property:ro.crypto.state=unencrypted
+    stop keystore2
     stop teei_daemon
     stop keymaster-4-0
     stop gatekeeper-1-0
 
 on property:twrp.all.users.decrypted=true
+    stop keystore2
     stop teei_daemon
     stop keymaster-4-0
     stop gatekeeper-1-0
